--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="footer-container">
         <marquee>
              <footer>
-            <p>2023 - jakson</p>
+            <p>2023 - jakson henrique</p>
              </footer>
         </marquee>
     </div>
